fix: overlay z-index adjustment

--- a/styles/css/vtex.store-link.css
+++ b/styles/css/vtex.store-link.css
@@ -9,6 +9,75 @@
 /* Colors */
 @import url("https://fonts.googleapis.com/css2?family=Overpass:wght@300;400;600;700;800;900&display=swap");
 /* Grid breakpoints */
+.link--section-title {
+  text-decoration: none;
+  margin-right: 17px;
+}
+@media screen and (max-width: 768px) {
+  .link--section-title {
+    margin-right: 8px;
+  }
+}
+
+.label--section-title {
+  color: #000;
+  text-align: right;
+  font-family: "Proxima Nova";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: -0.16px;
+}
+
+.link--pre-owned-product-summary-link {
+  border-radius: var(--radius-rounded-sm, 2px);
+  background: var(--bg-brand-secondary-bold-base, #2B2B3A);
+  padding: 10px 16px;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+  width: 100%;
+}
+.link--pre-owned-product-summary-link:hover {
+  background: var(--bg-brand-secondary-bold-hover, #424250);
+}
+.link--pre-owned-product-summary-link .label {
+  color: var(--text-inverse-bold, #FFF);
+  text-align: center;
+  font-family: "Proxima Nova";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: -0.14px;
+}
+
+.link--collection-category-cards-see-all {
+  display: flex;
+  padding: 12px 20px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+  border: 1.25px solid #18181b;
+  background: #fff;
+  color: #3f3f46;
+  font-family: "Proxima Nova";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: -0.16px;
+  width: fit-content;
+  margin-top: 2.375rem;
+  text-decoration: none;
+}
+.link--collection-category-cards-see-all:hover {
+  border-color: #ee8146 !important;
+  background: #fdf2ec !important;
+  color: #ff5a00 !important;
+  transition: all 0.3s ease-in-out;
+}
+
 .link--see-more-button-roland {
   color: #FFF;
   text-align: right;
@@ -65,32 +134,6 @@
     margin: 0 16px;
   }
 }
-.link--collection-category-cards-see-all {
-  display: flex;
-  padding: 12px 20px;
-  justify-content: center;
-  align-items: center;
-  border-radius: 2px;
-  border: 1.25px solid #18181b;
-  background: #fff;
-  color: #3f3f46;
-  font-family: "Proxima Nova";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 24px;
-  letter-spacing: -0.16px;
-  width: fit-content;
-  margin-top: 2.375rem;
-  text-decoration: none;
-}
-.link--collection-category-cards-see-all:hover {
-  border-color: #ee8146 !important;
-  background: #fdf2ec !important;
-  color: #ff5a00 !important;
-  transition: all 0.3s ease-in-out;
-}
-
 .link--home-black-friday-banner-link {
   border-radius: var(--radius-rounded-sm, 2px);
   background: var(--Gray-Scale-White, #FFF);
@@ -157,49 +200,6 @@
   background: var(--bg-brand-secondary-bold-hover, #424250);
 }
 
-.link--section-title {
-  text-decoration: none;
-  margin-right: 17px;
-}
-@media screen and (max-width: 768px) {
-  .link--section-title {
-    margin-right: 8px;
-  }
-}
-
-.label--section-title {
-  color: #000;
-  text-align: right;
-  font-family: "Proxima Nova";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px;
-  letter-spacing: -0.16px;
-}
-
-.link--pre-owned-product-summary-link {
-  border-radius: var(--radius-rounded-sm, 2px);
-  background: var(--bg-brand-secondary-bold-base, #2B2B3A);
-  padding: 10px 16px;
-  text-decoration: none;
-  transition: all 0.2s ease-in-out;
-  width: 100%;
-}
-.link--pre-owned-product-summary-link:hover {
-  background: var(--bg-brand-secondary-bold-hover, #424250);
-}
-.link--pre-owned-product-summary-link .label {
-  color: var(--text-inverse-bold, #FFF);
-  text-align: center;
-  font-family: "Proxima Nova";
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 20px;
-  letter-spacing: -0.14px;
-}
-
 .link--talk-to-us-link {
   display: flex;
   align-items: center;
@@ -250,7 +250,7 @@
   justify-content: center;
   text-decoration: none;
   gap: 8px;
-  z-index: 999;
+  z-index: 997;
   top: 4px;
 }
 .link--help-center .label--help-center {
